# ahead-rev-sim

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: cli.md  concepts.md  design_isa_machine.md  design_metrics.md  index.md  quickstart.md  time_travel_debug_demo.md
src/ahead_rev_sim/: __init__.py  cli.py  debugger.py  energy.py  history.py  isa.py  machine.py  memory.py  metrics.py  parser.py  reversible_memory.py
src/ahead_rev_sim/examples/: __init__.py  analyze_history.py  debug_demo.py  prog_increment.py  run_example.py  run_loop.py
tests/: test_basic.py
