[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ahead-rev-sim"
version = "0.5.0"
description = "Reversible compute playground for an Ahead Computing style RISC V extension."
authors = [{ name = "Ahead Computing (concept)", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ahead-rev-sim = "ahead_rev_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
